--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 url: "https://emmens-bv.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Emmens" # the name of your site, e.g. ACME Corp.
+exclude: ["README.md"]
+lang: "nl-NL"
+permalink: /:categories/:year/:month/:day/:title
